--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Tangerine');
+
+*{
+  box-sizing: border-box;
+  font-family: 'Tangerine', serif;
+}
