--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+
+<header>
+  <div class="container">
+    <a href="#" routerLink="/" class="logo">Pytha-Food</a>
+
+    <nav>
+      <ul>
+        <li>
+          <a href="#">Cart</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
