--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 
 <header>
-  <div class="container">
+  <div class="container" id="headerDiv">
     <a href="#" routerLink="/" class="logo">Pytha-Food</a>
 
     <nav>
