--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,6 +17,11 @@ a:hover{
   justify-content: space-between;
 }
 
+.logo{
+  font-weight: bolder;
+  font-size: 20px;
+}
+
 nav ul{
   list-style-type: none;
 }
