--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
 <app-header></app-header>
+
+<div>
+  <ul>
+    <li *ngFor="let f of foods">
+      <a><img src="{{f}}" alt="Images"></a>
+    </li>
+  </ul>
+</div>
