Display Images style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div>
+<div class="container" id="h">
   <ul>
     <li *ngFor="let f of foods">
       <a><img src="{{f}}" alt="Images"></a>
