--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,17 @@
-<p>search works!</p>
+
+<div class="container shadow min-vh-100 py-4">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div class="small fw-light">search input with icon</div>
+      <div class="input-group">
+        <input class="form-control border-end-0 border rounded-pill" type="search" value="search" id="example-search-input">
+        <span class="input-group-append">
+                    <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+      </div>
+    </div>
+  </div>
+
+</div>
