--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<app-search></app-search>
+
 <!--<div class="container" id="h">-->
 <!--  <ul>-->
 <!--    <li *ngFor="let f of foods">-->
