--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,10 +1,9 @@
 
-<div class="container shadow min-vh-100 py-4">
-  <div class="row">
+
+  <div class="row mt-5">
     <div class="col-md-5 mx-auto">
-      <div class="small fw-light">search input with icon</div>
       <div class="input-group">
-        <input class="form-control border-end-0 border rounded-pill" type="search" value="search" id="example-search-input">
+        <input class="form-control border-end-0 border rounded-pill" type="search" [value]="searchItem" id="example-search-input" placeholder="Search Food By Name">
         <span class="input-group-append">
                     <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
                         <i class="fa fa-search"></i>
@@ -14,4 +13,3 @@
     </div>
   </div>
 
-</div>
