--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,7 +5,7 @@
       <div class="input-group">
         <input class="form-control border-end-0 border rounded-pill" type="search" [(ngModel)]="searchItem" id="example-search-input" placeholder="Search Food By Name">
         <span class="input-group-append">
-                    <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+                    <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button" (click)="searchFood()">
                         <i class="fa fa-search"></i>
                     </button>
                 </span>
