--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,8 @@
 
 <app-search></app-search>
 
+<app-tags></app-tags>
+
 <!--<div class="container" id="h">-->
 <!--  <ul>-->
 <!--    <li *ngFor="let f of foods">-->
